--- a/projects/demo/src/app/pages/home/home.component.html
+++ b/projects/demo/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<ng-scrollbar shown="hover" [compact]="true">
+<ng-scrollbar shown="hover">
   <header>
     <h1>Angular Share Buttons</h1>
 
@@ -6,40 +6,70 @@
       <badges></badges>
 
       <section>
-        <div class="sb-options" fxLayout fxLayoutGap="2em" fxLayoutAlign="center center" fxLayout.lt-sm="column">
+        <div
+          class="sb-options"
+          fxLayout
+          fxLayoutGap="2em"
+          fxLayoutAlign="center center"
+          fxLayout.lt-sm="column"
+        >
           <div class="sb-option">
-            <a class="white-bg" mat-raised-button routerLink="/share-buttons-component">
-              <img src="assets/img/sharebuttons-component.svg"/>
+            <a
+              class="white-bg"
+              mat-raised-button
+              routerLink="/share-buttons-component"
+            >
+              <img src="assets/img/sharebuttons-component.svg" />
               <h3>Share Buttons</h3>
             </a>
 
-            <a class="white-bg" mat-raised-button href="https://murhafsousli.github.io/ngx-sharebuttons/buttons"
-               target="_blank">
+            <a
+              class="white-bg"
+              mat-raised-button
+              href="https://murhafsousli.github.io/ngx-sharebuttons/buttons"
+              target="_blank"
+            >
               <fa-icon [icon]="['fas', 'book']" size="lg"></fa-icon>
               <i>@ngx-share/buttons Compdoc</i>
             </a>
           </div>
           <div class="sb-option">
-            <a class="white-bg" mat-raised-button routerLink="/share-buttons-component">
-              <img src="assets/img/sharebutton-component.svg"/>
+            <a
+              class="white-bg"
+              mat-raised-button
+              routerLink="/share-buttons-component"
+            >
+              <img src="assets/img/sharebutton-component.svg" />
               <h3>Single Share Button</h3>
             </a>
 
-            <a class="white-bg" mat-raised-button href="https://murhafsousli.github.io/ngx-sharebuttons/button"
-               target="_blank">
+            <a
+              class="white-bg"
+              mat-raised-button
+              href="https://murhafsousli.github.io/ngx-sharebuttons/button"
+              target="_blank"
+            >
               <fa-icon [icon]="['fas', 'book']" size="lg"></fa-icon>
               <i>@ngx-share/button Compdoc</i>
             </a>
           </div>
 
           <div class="sb-option">
-            <a class="white-bg" mat-raised-button routerLink="/share-button-directive">
+            <a
+              class="white-bg"
+              mat-raised-button
+              routerLink="/share-button-directive"
+            >
               <span><fa-icon [icon]="directiveIcon"></fa-icon></span>
               <h3>Share Button Directive</h3>
             </a>
 
-            <a class="white-bg" mat-raised-button href="https://murhafsousli.github.io/ngx-sharebuttons/core"
-               target="_blank">
+            <a
+              class="white-bg"
+              mat-raised-button
+              href="https://murhafsousli.github.io/ngx-sharebuttons/core"
+              target="_blank"
+            >
               <fa-icon [icon]="['fas', 'book']" size="lg"></fa-icon>
               <i>@ngx-share/core Compdoc</i>
             </a>
@@ -47,7 +77,5 @@
         </div>
       </section>
     </div>
-
   </header>
-
 </ng-scrollbar>
