--- a/projects/demo/src/app/pages/themes/themes.component.html
+++ b/projects/demo/src/app/pages/themes/themes.component.html
@@ -1,10 +1,9 @@
-<ng-scrollbar shown="hover" [compact]="true">
+<ng-scrollbar shown="hover">
   <header>
     <h1>Themes</h1>
   </header>
 
   <div class="page-content container">
-
     <section>
       <section-title> Icons only </section-title>
       <share-buttons [theme]="theme" show="5" size="-1"></share-buttons>
@@ -12,21 +11,38 @@
 
     <section>
       <section-title> Icons + names </section-title>
-      <share-buttons [theme]="theme" showText="true" show="5" size="-1"></share-buttons>
+      <share-buttons
+        [theme]="theme"
+        showText="true"
+        show="5"
+        size="-1"
+      ></share-buttons>
     </section>
 
     <section>
       <section-title> Icons + names + counts </section-title>
-      <share-buttons [theme]="theme" url="http://twitter.com/" showText="true" showCount="true" show="5" size="-1"></share-buttons>
+      <share-buttons
+        [theme]="theme"
+        url="http://twitter.com/"
+        showText="true"
+        showCount="true"
+        show="5"
+        size="-1"
+      ></share-buttons>
     </section>
 
     <section>
       <section-title> Icons + counts </section-title>
-      <share-buttons [theme]="theme" url="http://twitter.com/" showCount="true" show="5" size="-1"></share-buttons>
+      <share-buttons
+        [theme]="theme"
+        url="http://twitter.com/"
+        showCount="true"
+        show="5"
+        size="-1"
+      ></share-buttons>
     </section>
 
     <theme-switcher (themeChange)="theme = $event"></theme-switcher>
-
   </div>
 
   <footer></footer>
