--- a/projects/demo/src/app/shared/nav-menu/nav-menu.component.html
+++ b/projects/demo/src/app/shared/nav-menu/nav-menu.component.html
@@ -1,17 +1,22 @@
 <div class="header">
   <a class="cover" routerLink="/">
     <div class="cover-logo">
-      <img src="assets/img/logo.svg"/>
+      <img src="assets/img/logo.svg" />
     </div>
     <h3>@ngx-share</h3>
   </a>
   <mat-divider></mat-divider>
 </div>
-<ng-scrollbar shown="hover" [compact]="true">
+<ng-scrollbar shown="hover">
   <div class="menu">
     <mat-nav-list>
-      <a mat-list-item *ngFor="let item of menu" [routerLink]="item.link"
-         routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+      <a
+        mat-list-item
+        *ngFor="let item of menu"
+        [routerLink]="item.link"
+        routerLinkActive="active-link"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
         <i class="fas fa-caret-right" aria-hidden="true"></i>
         <span>{{ item.name }}</span>
       </a>
